# tempoblock

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tempoblock/: __init__.py  blocker.py  cli.py  timer.py
tests/: __init__.py  test_blocker.py
