[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempoblock"
version = "0.1.0"
description = "Temporarily block distracting websites and apps for focused work"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joel Claw", email = "joel@cigrand.dev"}
]
keywords = ["productivity", "focus", "block", "distraction", "timer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = ["rich>=13.0", "psutil>=5.9"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1.0"]

[project.scripts]
tempoblock = "tempoblock.cli:main"
tb = "tempoblock.cli:main"

[project.urls]
Homepage = "https://github.com/Joel-Claw/tempoblock"
Repository = "https://github.com/Joel-Claw/tempoblock"
Issues = "https://github.com/Joel-Claw/tempoblock/issues"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']